--- a/src/app/backend/user/user.component.html
+++ b/src/app/backend/user/user.component.html
@@ -24,7 +24,6 @@
           <th scope="col">ชื่อเล่น</th>
           <th scope="col">หมายเลขโทรศัพท์</th>
           <th scope="col">E-mail</th>
-          <th scope="col">รหัสผ่าน</th>
           <th scope="col">ระดับ</th>
           <th scope="col">การกระทำ</th>
 
@@ -37,11 +36,10 @@
           <td class="text-center">เก่ง</td>
           <td class="text-left">0830541969</td>
           <td class="text-left">supawit.ubu@gmail.com</td>
-          <td class="text-center"><i class="fa fa-eye"></i></td>
           <td class="text-center">Supper Administrator</td>
           <td><div class="dropdown text-center">
-              <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-          <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+              <a class="fa fa-ellipsis-h btn" id="action" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+          <div class="dropdown-menu " aria-labelledby="action">
               <a class="dropdown-item btn" data-toggle="modal" data-target="#edituser" >
                   <i class="fa fa-edit"></i>แก้ไข</a>
               <a class="dropdown-item btn">
