--- a/src/app/salary/employee/employee.component.html
+++ b/src/app/salary/employee/employee.component.html
@@ -50,8 +50,8 @@
                   <td>55</td>
                   <td class="text-center"><button type="button" class="btn btn-warning">ปิด</button></td>
                   <td><div class="dropdown text-center">
-                      <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="fa fa-ellipsis-h btn" id="action" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                  <div class="dropdown-menu" aria-labelledby="action">
                       <a class="dropdown-item btn" data-toggle="modal" data-target="#editemployee">
                           <i class="fa fa-edit"></i>แก้ไข</a>
                       <a class="dropdown-item btn" data-toggle="modal" data-target="#delete">
@@ -117,8 +117,8 @@
                       <td>55</td>
                       <td class="text-center"><button type="button" class="btn btn-warning">ปิด</button></td>
                       <td><div class="dropdown text-center">
-                          <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="fa fa-ellipsis-h btn" id="action" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                      <div class="dropdown-menu" aria-labelledby="action">
                           <a class="dropdown-item btn" data-toggle="modal" data-target="#editemployee">
                               <i class="fa fa-edit"></i>แก้ไข</a>
                           <a class="dropdown-item btn" data-toggle="modal" data-target="#delete">
@@ -183,8 +183,8 @@
                       <td>55</td>
                       <td class="text-center"><button type="button" class="btn btn-success">เปิด</button></td>
                       <td><div class="dropdown text-center">
-                          <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="fa fa-ellipsis-h btn" id="action" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                      <div class="dropdown-menu" aria-labelledby="action">
                           <a class="dropdown-item btn" data-toggle="modal" data-target="#editemployee">
                               <i class="fa fa-edit"></i>แก้ไข</a>
                           <a class="dropdown-item btn" data-toggle="modal" data-target="#delete">
